--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -6,7 +6,7 @@
   grid-template-columns: repeat(12, 1fr);
   grid-template-rows: repeat(12, 1fr);
   position: relative;
-  overflow-x: hidden;
+  overflow-x: scroll;
   overflow-y: hidden;
   transition: all 0.5s ease;
 
@@ -28,9 +28,9 @@
   transition: transform 1s ease;
  }
 
-//  html {
-//    scroll-behavior: smooth;
-//  }
+ html {
+   scroll-behavior: smooth;
+ }
 
 // ::-webkit-scrollbar-track {
 //   background: blue; 
@@ -40,9 +40,9 @@
   width: 5px;
 }
 
-// ::-webkit-scrollbar-thumb {
-//   background: red; 
-// }
+::-webkit-scrollbar-thumb {
+  background: red; 
+}
 
 // ::-webkit-scrollbar-thumb:hover {
 //   background: green; 
