--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -40,9 +40,9 @@
   width: 5px;
 }
 
-::-webkit-scrollbar-thumb {
-  background: red; 
-}
+// ::-webkit-scrollbar-thumb {
+//   background: red; 
+// }
 
 // ::-webkit-scrollbar-thumb:hover {
 //   background: green; 
