--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -8,6 +8,7 @@
   position: relative;
   overflow-x: scroll;
   overflow-y: hidden;
+  scroll-snap-type:x proximity;
   transition: all 0.5s ease;
 
  }
